# muon-diy-implementation

./: .gitignore  CMakeLists.txt  README.md  design.md
examples/: cifar100.cu  mnist.cu  xor.cu
include/: nn.h
src/: nn.cu
tools/: image_classifier.cpp  prepare_cifar100.py  prepare_mnist.py
webapp/: main.py  requirements.txt
webapp/static/: index.html
